<resources>
    <string name="app_name">Ingood</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Register</string>
    <string name="home_page">Home Page</string>
    <string name="activity_page">Activity content</string>
    <string name="activity_publish">Activity publish</string>
    <string name="activity_edit">Activity Edit</string>
    <string name="activity_closed">Closed</string>
    <string name="login_slogan">Activity / Band / Social</string>
    <string name="login_account">Account</string>
    <string name="login_pwd">Password</string>
    <string name="login_forget_pwd">Forget Password?</string>
    <string name="login_temp_password_success">Temp Password mail has been sent</string>
    <string name="login_temp_password_fail">Temp Password mail sent error</string>
    <string name="login_email_account_empty">Please fill in Email account</string>
    <string name="login_success">Login success</string>
    <string name="register_title_form">Registration</string>
    <string name="register_title_verify">Verification</string>
    <string name="register_title_location">Location</string>
    <string name="register_title_interest">Interest</string>
    <string name="user_data_email">E-mail</string>
    <string name="user_data_pwd">Password</string>
    <string name="user_data_pwd_confirm">Confirm password</string>
    <string name="user_data_name">Name</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="send_verify_code">Send Code</string>
    <string name="input_verify_code_hint">Input verify code please</string>
    <string name="hint_for_verify">Please push "Send Code" to send verify code to your email.</string>
    <string name="register_person_success">Register success</string>
    <string name="activity_action_save_ig_activity">Save</string>
    <string name="activity_action_no_attend">Cancel</string>
    <string name="activity_action_attend">Attend</string>
    <string name="activity_action_report">Report</string>
    <string name="activity_action_share">Share</string>
    <string name="activity_action_edit">Edit</string>
    <string name="activity_action_delete">Delete</string>
    <string name="title_person_data">Person Data</string>
    <string name="title_comment_grade">Comment Grade</string>
    <string name="title_about_me">About Me</string>
    <string name="title_interesting_tags">Interests</string>
    <string name="btn_save">Save</string>
    <string name="btn_change_pwd">Change Password</string>
    <string name="edit_hint_new_pwd">New Password</string>
    <string name="edit_hint_confirm_new_pwd">Confirm New Password</string>
    <string name="btn_text_cancel">Cancel</string>
    <string name="btn_text_ok">OK</string>
    <string name="person_data_update_success">Personal data has been updated</string>
    <string name="person_data_photo_edit">Edit photo</string>
    <string name="person_data_view_all_igactivities">All activities</string>
    <string name="activity_detail_publisher">Publisher : </string>
    <string name="activity_detail_attendees_count_1"> </string>
    <string name="activity_detail_attendees_count_2">people have attended</string>
    <string name="activity_detail_deem_title">Activity deems</string>
    <string name="activity_detail_comment_title">Activity comments</string>
    <string name="activity_detail_deem_good_people"> deem good</string>
    <string name="activity_detail_deem_bad_people"> deem bad</string>
    <string name="activity_detail_offer_title">Special offers</string>
    <string name="activity_detail_offer_max_1">All release </string>
    <string name="activity_detail_offer_max_2"> special offers</string>
    <string name="activity_detail_offer_took_1"> </string>
    <string name="activity_detail_offer_took_2"> has been took</string>
    <string name="activity_detail_offer_show">Show your offer</string>
    <string name="activity_detail_offer_scan">Scan offer</string>
    <string name="activity_detail_offer_no_release">No offers</string>
    <string name="activity_detail_comment_publish">Message</string>
    <string name="activity_detail_comment_view_all">All</string>
    <string name="activity_comment_publish_description">Input your comment : </string>
    <string name="activity_comment_edit_description">Edit your comment : </string>
    <string name="activity_publish_name">Activity name</string>
    <string name="activity_publish_location">Activity location</string>
    <string name="activity_publish_description">Activity description</string>
    <string name="activity_publish_date_begin">Activity begin</string>
    <string name="activity_publish_date_end">Activity end</string>
    <string name="activity_publish_date_description">Choose date</string>
    <string name="activity_publish_time_description">Choose time</string>
    <string name="activity_publish_what_kind">What kind of activity</string>
    <string name="activity_publish_max_attention">Upper limit of attention</string>
    <string name="activity_publish_max_offer">Release offers quantity</string>
    <string name="activity_publish_edit_update">Update</string>
    <string name="activity_publish_images_upload">Upload images</string>
    <string name="activity_publish_images_select">Select image</string>
    <string name="activity_publish_republish">Republish</string>
    <string name="activity_publish_info">Activity information</string>
    <string name="activity_publish_tags">Activity tags</string>
    <string name="activity_publish_max_attention_unit"> </string>
    <string name="activity_publish_max_offer_unit"> </string>
    <string name="activity_publish_max_offer_help_message">The special offers provide few benefit for attenders from you(publisher),\n\n
        you can scan QR-code that attender show, consume a offer after scan success until reach max limitation.</string>
    <string name="tag_all">All</string>
    <string name="tag_offer">Offers</string>
    <string name="tag_recommend">Recommends</string>
    <string name="tag_my_igactivity">My</string>
    <string name="tag_my_attend_igactivity">Attended</string>
    <string name="tag_my_save_igactivity">Saved</string>
    <string name="tag_official">Official</string>
    <string name="tag_recently">Recently</string>
    <string name="tag_ongoing">Ongoing</string>
    <string name="tag_popularity">Popularity</string>
    <string name="tag_good">Good</string>
    <string name="tag_nearly">Nearly</string>
    <string name="tag_sport">Sport</string>
    <string name="tag_ball">Ball</string>
    <string name="tag_casual">Casual</string>
    <string name="tag_literary">Literary</string>
    <string name="tag_literary2">Literary</string>
    <string name="tag_literary3">Literary</string>
    <string name="tag_art">Art</string>
    <string name="tag_humanities">Humanities</string>
    <string name="tag_social">Social</string>
    <string name="tag_social2">Social</string>
    <string name="tag_mind">Mind</string>
    <string name="tag_research">Research</string>
    <string name="tag_care">Care</string>
    <string name="tag_env">Environment</string>
    <string name="tag_outdoor">Outdoor</string>
    <string name="tag_outdoor2">Outdoor</string>
    <string name="tag_edu">Education</string>
    <string name="tag_food">Food</string>
    <string name="tag_food2">Food</string>
    <string name="tag_food3">Eat</string>
    <string name="tag_care_description">Human care</string>
    <string name="tag_environmental_protection_description">Environmental protection</string>
    <string name="tag_education_description">Education</string>
    <string name="tag_manpower_description">Manpower</string>
    <string name="tag_animal_description">Animal care</string>
    <string name="loading_wait">Loading…</string>
    <string name="log_out">Log Out</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_publish">Publish</string>
    <string name="dialog_delete_igactivity_confirm_message">Are you sure delete this activity?</string>
    <string name="dialog_delete_comment_confirm_message">Are you sure delete this comment?</string>
    <string name="dialog_delete_igactivity_done_message">Activity has been deleted</string>
    <string name="dialog_delete_comment_done_message">Comment has been deleted</string>
    <string name="dialog_update_comment_done_message">Comment has been updated</string>
    <string name="dialog_logout_confirm_message">Are you sure logout this account?</string>
    <string name="dialog_exit_confirm_message">Are you leave Ingood?</string>
    <string name="search_bar_label">Search</string>
    <string name="search_bar_hint">Name #Tags @Email</string>
    <string name="menu_personal_detail">Personal</string>
    <string name="menu_personal_about">About</string>
    <string name="menu_personal_logout">Logout</string>
    <string name="register_email_format_wrong">Email format wrong</string>
    <string name="register_email_was_exist">The email was exist</string>
    <string name="register_password_format_wrong">Password format wrong</string>
    <string name="register_confirm_password_format_wrong">Confirm password format wrong</string>
    <string name="register_password_not_consistent">Password and confirm password are not consistent</string>
    <string name="register_displayname_format_wrong">Display name format wrong</string>
    <string name="register_gender_choose">Choose your gender please</string>
    <string name="register_age_choose">Choose your age please</string>
    <string name="register_location_choose">Choose your location please</string>
    <string name="nwk_connection_fail">Network connection fail?</string>
    <string name="missing_necessary_data">Missing necessary condition data</string>
    <string name="parsing_data_error">Parsing data error</string>
    <string name="download_data_error">Download data error</string>
    <string name="google_signin_error">Google sign-in error</string>
    <string name="verify_email_sent">Your verify code has been sent to your email</string>
    <string name="deem_activity_has_been_sent">Deem has been sent</string>
    <string name="deem_activity_has_been_recover">Deem has been recovered</string>
    <string name="deem_fail_in_your_own_igactivity">You can not deem your own activity</string>
    <string name="offer_after_attend">take the offer after attend</string>
    <string name="show_code_for_publisher">Show the screen for publisher</string>
    <string name="all_offers_had_been_took">all offers had been took</string>
    <string name="attend_activity_success">Attended</string>
    <string name="no_attend_activity_success">Canceled attend</string>
    <string name="comment_has_been_published">Comment has been published</string>
    <string name="activity_has_been_published">Activity has been published</string>
    <string name="activity_has_been_updated">Activity has been updated</string>
    <string name="publish_igactivity_name_format_wrong">Activity name format wrong</string>
    <string name="publish_igactivity_max_attention_zero">Upper limit of attention can not be zero</string>
    <string name="publish_igactivity_max_attention_format_wrong">Upper limit of attention is format wrong</string>
    <string name="publish_igactivity_location_format_wrong">Activity location format wrong</string>
    <string name="publish_igactivity_description_format_wrong">Activity description format wrong</string>
    <string name="publish_igactivity_tags_format_wrong">Input one type of activity at least</string>
    <string name="publish_igactivity_images_format_wrong">Upload one activity image at least</string>
    <string name="publish_igactivity_time_format_wrong">Determine time for activity</string>
    <string name="publish_igactivity_begin_end_time_wrong">Begin can not after end time</string>
</resources>