<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.IgActivityPublishActivity">

    <RelativeLayout
        android:id="@+id/layoutIgActivityPublishTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10.1dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true">

            <ImageButton
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_arrow_btn_dark" />

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/imgBack"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:textSize="@dimen/title_size_registration"
                android:textColor="@color/colorSlave"
                android:textStyle="bold"
                android:text="@string/activity_publish" />
        </RelativeLayout>
    </RelativeLayout>

    <EditText
        android:theme="@style/IngoodEditTextStyle"
        android:id="@+id/editTextIgActivityPublishName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/layoutIgActivityPublishTitle"
        android:layout_marginStart="@dimen/margin_start_igactivity_publish"
        android:layout_marginEnd="@dimen/margin_end_igactivity_publish"
        android:layout_marginTop="30dp"
        android:textSize="@dimen/text_size_registration_form_input"
        android:textCursorDrawable="@null"
        android:lineSpacingExtra="0.8sp"
        android:inputType="textPersonName"
        android:hint="@string/user_data_name"
        android:paddingStart="@dimen/padding_start_registration_form_input_text"
        android:textColorHighlight="@color/colorSlaveUltraLight"
        tools:ignore="RtlSymmetry"
        android:ems="10" />

    <Button
        android:id="@+id/btnIgActivityPublishLeftBottom"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10.1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/selector_register_next"
        android:textColor="@color/colorSlave"
        android:textSize="@dimen/text_size_button_ig_activity"
        android:text="@string/dialog_cancel"/>

    <Button
        android:id="@+id/btnIgActivityPublishRightBottom"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10.1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/selector_register_next"
        android:textColor="@color/colorSlave"
        android:textSize="@dimen/text_size_button_ig_activity"
        android:text="@string/dialog_publish"/>

</android.support.constraint.ConstraintLayout>