<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.RegistrationFormFragment">

    <EditText
        android:theme="@style/IngoodEditTextStyle"
        android:id="@+id/edit_name"
        android:layout_marginStart="31.5dp"
        android:layout_marginEnd="31dp"
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_registration"
        android:textCursorDrawable="@null"
        android:lineSpacingExtra="1sp"
        android:inputType="textPersonName"
        android:hint="@string/user_data_name"
        android:paddingStart="12dp"
        tools:ignore="RtlSymmetry"
        android:ems="10" />

    <EditText
        android:theme="@style/IngoodEditTextStyle"
        android:id="@+id/edit_account"
        android:layout_marginStart="31.5dp"
        android:layout_marginEnd="31dp"
        android:layout_marginTop="@dimen/gap_registration_btw_texts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_registration"
        android:textCursorDrawable="@null"
        android:lineSpacingExtra="1sp"
        android:inputType="textPersonName"
        android:hint="@string/user_data_email"
        android:paddingStart="12dp"
        tools:ignore="RtlSymmetry"
        android:ems="10"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31.5dp"
        android:layout_marginEnd="31dp"
        android:layout_marginTop="@dimen/gap_registration_btw_texts">
        <EditText
            android:theme="@style/IngoodEditTextStyle"
            android:id="@+id/edit_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_registration"
            android:textCursorDrawable="@null"
            android:inputType="textPassword"
            android:hint="@string/user_data_pwd"
            android:paddingStart="12dp"
            tools:ignore="RtlSymmetry"
            android:ems="10"/>

        <ImageButton
            android:id="@+id/pwd_eye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/edit_pwd"
            android:layout_centerVertical="true"
            android:background="@color/colorTransparent"
            android:src="@drawable/view_g"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31.5dp"
        android:layout_marginEnd="31dp"
        android:layout_marginTop="@dimen/gap_registration_btw_texts">
        <EditText
            android:theme="@style/IngoodEditTextStyle"
            android:id="@+id/edit_pwd_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_registration"
            android:textCursorDrawable="@null"
            android:inputType="textPassword"
            android:hint="@string/user_data_pwd_confirm"
            android:paddingStart="12dp"
            tools:ignore="RtlSymmetry"
            android:ems="10"/>

        <ImageButton
            android:id="@+id/pwd_confirm_eye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/edit_pwd_confirm"
            android:layout_centerVertical="true"
            android:background="@color/colorTransparent"
            android:src="@drawable/view_g"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:layout_marginStart="31.5dp"
        android:layout_marginTop="@dimen/gap_registration_btw_texts">

        <Spinner
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:theme="@style/IngoodSpinnerStyle"
            android:id="@+id/spinner_gender"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:spinnerMode="dropdown"/>

        <Spinner
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:theme="@style/IngoodSpinnerStyle"
            android:id="@+id/spinner_age"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="5dp"
            android:spinnerMode="dropdown"/>
    </RelativeLayout>

</LinearLayout>